testsuite/tests/backpack/should_fail/bkpfail03.stderr
==== Package p ====

bkpfail03.bkp:6:5: error:
    Failed to unify when filling requirements:
    Context:
      provides: M1 -> p():M1
                      M{M, M}
                M2 -> p():M2
                      M{M, M}
      requires:
    Merging shape:
      provides:
      requires: M2 -> p():M2
                      p():M1.M{p():M1.M}
